--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,12 @@
     <div class="topbar">
       <div class="topbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">Foods of Lincoln</a>
 
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="http://127.0.0.1:8000/#">Home</a></li>
+            <li><a href="http://www.khirycooper.com/">About Me</a></li>
+            <li><a href="#contact">Favorites</a></li>
           </ul>
           <p class="pull-right">Logged in as <a href="#">username</a></p>
 
@@ -48,30 +48,15 @@
     <div class="container-fluid">
       <div class="sidebar">
         <div class="well">
-          <h5>Sidebar</h5>
+          <h5>Top Downtown Spots</h5>
           <ul>
 
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <li><a href="http://www.noodles.com/">Noodles and CO.</a></li>
+            <li><a href="http://www.downtowndoozys.com/">Doozy's</a></li>
+            <li><a href="http://www.yiayiaspizza.com/">Yia Yia's</a></li>
+            <li><a href="http://bisonwitches.com/">Bison Witches</a></li>
           </ul>
-          <h5>Sidebar</h5>
-
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-
-            <li><a href="#">Link</a></li>
-          </ul>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
+      
 
         </div>
       </div>
@@ -88,22 +73,24 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="span6">
+{% block cuisines %}
             <h2>Heading</h2>
             <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
             <p><a class="btn" href="#">View details &raquo;</a></p>
-
+{% endblock %}
           </div>
           <div class="span5">
-            <h2>Heading</h2>
+{% block restaurants %}            <h2>Add your Favorite</h2>
              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn" href="#">View details &raquo;</a></p>
-         </div>
+{% endblock %}         </div>
           <div class="span5">
-
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
-          </div>
+{% block ratings %}
+     
+            <h2>Add your Favorite</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+<p><a class="btn" href="#">View details &raquo;</a></p>
+{% endblock %}          </div>
         </div>
 
         <hr>
@@ -111,26 +98,18 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="span6">
-            <h2>Heading</h2>
-            <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
           </div>
 
           <div class="span5">
-            <h2>Heading</h2>
-             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
+
          </div>
           <div class="span5">
-            <h2>Heading</h2>
 
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn" href="#">View details &raquo;</a></p>
           </div>
         </div>
 
         <footer>
-          <p>&copy; Company 2011</p>
+          <p>&copy; Khiry Cooper 2011</p>
 
         </footer>
       </div>
