--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,4 +4,23 @@
 <a href="{{object.get_absolute_url }}">{{ object }}</a>
 {% endfor %}
 {% endblock %}
+{% block cuisines %}
+<h2> browse by cuisine </h2>
+<ul> {% for object in cuisines %}
+<li> <a href="{{object.get_absolute_url }}">{{ object }}</a> </li>
+{% endfor %}
+{% endblock %}
+{% block restaurants %}
+<h2> browse by restaurant type </h2>
+<ul> {% for object in restaurants %}
+<li> <a href="{{object.get_absolute_url }}">{{ object }}</a> </li>
+{% endfor %}
+{% endblock %}
+{% block ratings %}
+<h2> browse by rating </h2>
+<ul> {% for object in ratings %}
+<li> <a href="{{object.get_absolute_url }}">{{ object }}</a> </li>
+{% endfor %}
+{% endblock %}
+
 
